// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings actions should load settings and fail 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "GET_SETTING_REQUEST",
  },
  Object {
    "payload": Object {
      "error": [Error: some-error],
      "payload": Object {},
    },
    "type": "GET_SETTING_FAILURE",
  },
]
`;

exports[`Settings actions should load settings and success 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "GET_SETTING_REQUEST",
  },
  Object {
    "payload": Object {
      "data": "some-data",
    },
    "type": "GET_SETTING_SUCCESS",
  },
]
`;
